--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,68 @@ shimmy>=0.2.1  # For compatibility layers if needed
 tensorboard
 hyperliquid-python-sdk
 yfinance
+
+# Deep Learning Framework
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
+lightning>=2.0.0
+
+# Financial Data & Trading
+pandas>=2.0.0
+numpy>=1.24.0
+yfinance>=0.2.0
+ccxt>=4.0.0
+zipline-reloaded>=3.0.0
+pyfolio-reloaded>=0.9.0
+empyrical>=0.5.0
+quantlib-python>=1.31
+ta-lib>=0.4.0
+vectorbt>=0.25.0
+
+# Market Data APIs
+alpha-vantage>=2.3.0
+polygon-api-client>=1.0.0
+quandl>=3.7.0
+
+# Data Processing & Analysis
+scipy>=1.10.0
+scikit-learn>=1.3.0
+statsmodels>=0.14.0
+numba>=0.57.0
+bottleneck>=1.3.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.15.0
+bokeh>=3.2.0
+mplfinance>=0.12.0
+
+# Model Development & Experiment Tracking
+tensorboard>=2.13.0
+wandb>=0.15.0
+mlflow>=2.5.0
+optuna>=3.2.0
+ray[tune]>=2.5.0
+
+# Time Series Analysis
+arch>=6.2.0
+tsfresh>=0.20.0
+sktime>=0.21.0
+
+# Database & Storage
+sqlalchemy>=2.0.0
+pymongo>=4.4.0
+redis>=4.6.0
+h5py>=3.9.0
+tables>=3.8.0
+
+# Utilities
+tqdm>=4.65.0
+joblib>=1.3.0
+dask>=2023.7.0
+jupyter>=1.0.0
+ipywidgets>=8.0.0
+black>=23.0.0
+pytest>=7.4.0
